<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/storeOrder"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/store_orders"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/orderStatus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/order_status"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <TextView
            android:id="@+id/OrderStoreName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/store_name" />

        <TextView
            android:id="@+id/OrderItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_items" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>