<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/storeInfo"
        android:layout_width="258dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="8dp"
        android:text="@string/store_info"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/storeName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/storeName"
        android:layout_width="258dp"
        android:layout_height="45dp"
        android:layout_marginBottom="12dp"
        android:shadowColor="#FFFFFF"
        android:text="@string/store_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/storeAddress"
        tools:layout_editor_absoluteX="73dp" />

    <TextView
        android:id="@+id/storeAddress"
        android:layout_width="258dp"
        android:layout_height="45dp"
        android:layout_marginBottom="36dp"
        android:text="@string/store_address"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/saveChanges"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveChanges"
        android:layout_width="256dp"
        android:layout_height="54dp"
        android:layout_marginBottom="408dp"
        android:text="@string/save_store"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>